# Neural-Network-Constructor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Doc/: technical-specification.md
Front/: App.cpp  App.h  CMakeLists.txt  Node.cpp  Node.h  header.h  main.cpp
documents/: scientific_report.docx  technical-specification.md
libNNC/: libNNC.so.1.0.0  libNNC_lib.so.1.0.0
src/: main.cpp
src/back/: CMakeLists.txt
src/back/build_lib/: CMakeCache.txt  Makefile  cmake_install.cmake  libNNC.so.1.0.0
src/back/source/: main.cpp
src/back/source/Model/: Activations.cpp  Activations.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Model.cpp  Model.h  OutputLayer.cpp  OutputLayer.h  State.cpp  State.h
src/default_train_data/: test_data.csv  train_data.csv
src/front/: App.cpp  App.h  Edge.cpp  Edge.h  Node.cpp  Node.h  graphwidget.cpp  graphwidget.h  header.h  widget.cpp  widget.h  widget.ui  widgraph.pro
src/include/: Activation.cpp  Activation.hpp  Const.hpp  Math.cpp  Math.hpp
